step36_aws-rds/Python/cdk.out/BackStack.template.json
{
  "Resources": {
    "myrdsvpc32DA0298": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/Resource"
      }
    },
    "myrdsvpcPublicSubnet1SubnetA2146ADD": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet1/Subnet"
      }
    },
    "myrdsvpcPublicSubnet1RouteTableDB7818CE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet1/RouteTable"
      }
    },
    "myrdsvpcPublicSubnet1RouteTableAssociationCB65386E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myrdsvpcPublicSubnet1RouteTableDB7818CE"
        },
        "SubnetId": {
          "Ref": "myrdsvpcPublicSubnet1SubnetA2146ADD"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "myrdsvpcPublicSubnet1DefaultRouteB8A20DCB": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myrdsvpcPublicSubnet1RouteTableDB7818CE"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "myrdsvpcIGWB6C64E3E"
        }
      },
      "DependsOn": [
        "myrdsvpcVPCGW4ED3D538"
      ],
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet1/DefaultRoute"
      }
    },
    "myrdsvpcPublicSubnet1EIPC55EF77D": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet1/EIP"
      }
    },
    "myrdsvpcPublicSubnet1NATGatewayB1E045CB": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "myrdsvpcPublicSubnet1EIPC55EF77D",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "myrdsvpcPublicSubnet1SubnetA2146ADD"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet1/NATGateway"
      }
    },
    "myrdsvpcPublicSubnet2Subnet60DD4A42": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet2/Subnet"
      }
    },
    "myrdsvpcPublicSubnet2RouteTable7AA099AA": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet2/RouteTable"
      }
    },
    "myrdsvpcPublicSubnet2RouteTableAssociation2BB2C767": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myrdsvpcPublicSubnet2RouteTable7AA099AA"
        },
        "SubnetId": {
          "Ref": "myrdsvpcPublicSubnet2Subnet60DD4A42"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "myrdsvpcPublicSubnet2DefaultRoute322CD1C1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myrdsvpcPublicSubnet2RouteTable7AA099AA"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "myrdsvpcIGWB6C64E3E"
        }
      },
      "DependsOn": [
        "myrdsvpcVPCGW4ED3D538"
      ],
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet2/DefaultRoute"
      }
    },
    "myrdsvpcPublicSubnet2EIP20417D70": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet2/EIP"
      }
    },
    "myrdsvpcPublicSubnet2NATGatewayDC334277": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "myrdsvpcPublicSubnet2EIP20417D70",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "myrdsvpcPublicSubnet2Subnet60DD4A42"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PublicSubnet2/NATGateway"
      }
    },
    "myrdsvpcPrivateSubnet1Subnet1ACE8A6E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PrivateSubnet1/Subnet"
      }
    },
    "myrdsvpcPrivateSubnet1RouteTableC31EE1CA": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PrivateSubnet1/RouteTable"
      }
    },
    "myrdsvpcPrivateSubnet1RouteTableAssociation707D9C55": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myrdsvpcPrivateSubnet1RouteTableC31EE1CA"
        },
        "SubnetId": {
          "Ref": "myrdsvpcPrivateSubnet1Subnet1ACE8A6E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "myrdsvpcPrivateSubnet1DefaultRoute7603DD16": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myrdsvpcPrivateSubnet1RouteTableC31EE1CA"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "myrdsvpcPublicSubnet1NATGatewayB1E045CB"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "myrdsvpcPrivateSubnet2Subnet972EB78D": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PrivateSubnet2/Subnet"
      }
    },
    "myrdsvpcPrivateSubnet2RouteTableC5955767": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PrivateSubnet2/RouteTable"
      }
    },
    "myrdsvpcPrivateSubnet2RouteTableAssociation093E696E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myrdsvpcPrivateSubnet2RouteTableC5955767"
        },
        "SubnetId": {
          "Ref": "myrdsvpcPrivateSubnet2Subnet972EB78D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "myrdsvpcPrivateSubnet2DefaultRoute0EC4FE96": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myrdsvpcPrivateSubnet2RouteTableC5955767"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "myrdsvpcPublicSubnet2NATGatewayDC334277"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "myrdsvpcIGWB6C64E3E": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "BackStack/myrdsvpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/IGW"
      }
    },
    "myrdsvpcVPCGW4ED3D538": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        },
        "InternetGatewayId": {
          "Ref": "myrdsvpcIGWB6C64E3E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/myrdsvpc/VPCGW"
      }
    },
    "MySQLSubnetGroupA2AB7B72": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for MySQL database",
        "SubnetIds": [
          {
            "Ref": "myrdsvpcPublicSubnet1SubnetA2146ADD"
          },
          {
            "Ref": "myrdsvpcPublicSubnet2Subnet60DD4A42"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/MySQL/SubnetGroup/Default"
      }
    },
    "MySQLSecurityGroupCAACC784": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for MySQL database",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:3306",
            "FromPort": 3306,
            "IpProtocol": "tcp",
            "ToPort": 3306
          }
        ],
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/MySQL/SecurityGroup/Resource"
      }
    },
    "MySQLSecret76FDA2D7": {
      "Type": "AWS::SecretsManager::Secret",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName"
              }
            ]
          ]
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{\"username\":\"admin\"}"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/MySQL/Secret/Resource"
      }
    },
    "MySQLSecretAttachment426B2BAD": {
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
      "Properties": {
        "SecretId": {
          "Ref": "MySQLSecret76FDA2D7"
        },
        "TargetId": {
          "Ref": "MySQL3B9CF5CC"
        },
        "TargetType": "AWS::RDS::DBInstance"
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/MySQL/Secret/Attachment/Resource"
      }
    },
    "MySQL3B9CF5CC": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBInstanceClass": "db.t3.small",
        "AllocatedStorage": "100",
        "CopyTagsToSnapshot": true,
        "DBName": "mySqlDataBase",
        "DBSubnetGroupName": {
          "Ref": "MySQLSubnetGroupA2AB7B72"
        },
        "DeletionProtection": false,
        "EnableCloudwatchLogsExports": [
          "audit",
          "error",
          "general"
        ],
        "EnableIAMDatabaseAuthentication": true,
        "Engine": "mysql",
        "EngineVersion": "5.6.39",
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "MySQLSecret76FDA2D7"
              },
              ":SecretString:username::}}"
            ]
          ]
        },
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "MySQLSecret76FDA2D7"
              },
              ":SecretString:password::}}"
            ]
          ]
        },
        "MultiAZ": false,
        "PubliclyAccessible": true,
        "StorageType": "standard",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "MySQLSecurityGroupCAACC784",
              "GroupId"
            ]
          }
        ]
      },
      "UpdateReplacePolicy": "Snapshot",
      "Metadata": {
        "aws:cdk:path": "BackStack/MySQL/Resource"
      }
    },
    "LambdaRole3A44B857": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/AmazonRDSDataFullAccess"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/LambdaRole/Resource"
      }
    },
    "LambdaRoleDefaultPolicy75625A82": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "rds-db:connect",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":rds:",
                    {
                      "Ref": "AWS::Region"
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":db:",
                    {
                      "Ref": "MySQL3B9CF5CC"
                    }
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "LambdaRoleDefaultPolicy75625A82",
        "Roles": [
          {
            "Ref": "LambdaRole3A44B857"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/LambdaRole/DefaultPolicy/Resource"
      }
    },
    "HelloHandlerSecurityGroup081795F9": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatic security group for Lambda Function BackStackHelloHandler4CD6E969",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "myrdsvpc32DA0298"
        }
      },
      "DependsOn": [
        "MySQL3B9CF5CC",
        "MySQLSecretAttachment426B2BAD",
        "MySQLSecret76FDA2D7",
        "MySQLSecurityGroupCAACC784",
        "MySQLSubnetGroupA2AB7B72"
      ],
      "Metadata": {
        "aws:cdk:path": "BackStack/HelloHandler/SecurityGroup/Resource"
      }
    },
    "HelloHandler2E4FBA4D": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParametersc6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbebS3BucketB1E06C78"
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersc6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbebS3VersionKey3B36F228"
                        }
                      ]
                    }
                  ]
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersc6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbebS3VersionKey3B36F228"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        "Role": {
          "Fn::GetAtt": [
            "LambdaRole3A44B857",
            "Arn"
          ]
        },
        "Environment": {
          "Variables": {
            "INSTANCE_CREDENTIALS": {
              "Fn::Join": [
                "",
                [
                  "{{resolve:secretsmanager:",
                  {
                    "Ref": "MySQLSecretAttachment426B2BAD"
                  },
                  ":SecretString:::}}"
                ]
              ]
            },
            "HOST": {
              "Fn::GetAtt": [
                "MySQL3B9CF5CC",
                "Endpoint.Address"
              ]
            }
          }
        },
        "Handler": "index.handler",
        "Runtime": "python3.7",
        "Timeout": 60,
        "VpcConfig": {
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "HelloHandlerSecurityGroup081795F9",
                "GroupId"
              ]
            }
          ],
          "SubnetIds": [
            {
              "Ref": "myrdsvpcPrivateSubnet1Subnet1ACE8A6E"
            },
            {
              "Ref": "myrdsvpcPrivateSubnet2Subnet972EB78D"
            }
          ]
        }
      },
      "DependsOn": [
        "LambdaRoleDefaultPolicy75625A82",
        "LambdaRole3A44B857",
        "MySQL3B9CF5CC",
        "MySQLSecretAttachment426B2BAD",
        "MySQLSecret76FDA2D7",
        "MySQLSecurityGroupCAACC784",
        "MySQLSubnetGroupA2AB7B72"
      ],
      "Metadata": {
        "aws:cdk:path": "BackStack/HelloHandler/Resource",
        "aws:asset:path": "asset.c6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbeb.zip",
        "aws:asset:property": "Code"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Modules": "aws-cdk=1.87.1,@aws-cdk/assets=1.87.1,@aws-cdk/aws-applicationautoscaling=1.87.1,@aws-cdk/aws-autoscaling-common=1.87.1,@aws-cdk/aws-cloudwatch=1.87.1,@aws-cdk/aws-codeguruprofiler=1.87.1,@aws-cdk/aws-ec2=1.87.1,@aws-cdk/aws-ecr=1.87.1,@aws-cdk/aws-ecr-assets=1.87.1,@aws-cdk/aws-events=1.87.1,@aws-cdk/aws-iam=1.87.1,@aws-cdk/aws-kms=1.87.1,@aws-cdk/aws-lambda=1.87.1,@aws-cdk/aws-logs=1.87.1,@aws-cdk/aws-rds=1.87.1,@aws-cdk/aws-s3=1.87.1,@aws-cdk/aws-s3-assets=1.87.1,@aws-cdk/ [...]
      },
      "Metadata": {
        "aws:cdk:path": "BackStack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Parameters": {
    "AssetParametersc6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbebS3BucketB1E06C78": {
      "Type": "String",
      "Description": "S3 bucket for asset \"c6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbeb\""
    },
    "AssetParametersc6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbebS3VersionKey3B36F228": {
      "Type": "String",
      "Description": "S3 key for asset version \"c6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbeb\""
    },
    "AssetParametersc6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbebArtifactHash60F72635": {
      "Type": "String",
      "Description": "Artifact hash for asset \"c6c6838e7514cad1ab518a582ee49124730357f441c5242ce8bc65015b89fbeb\""
    }
  },
  "Outputs": {
    "endpoint": {
      "Value": {
        "Fn::GetAtt": [
          "MySQL3B9CF5CC",
          "Endpoint.Address"
        ]
      }
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  }
}
